# BudgetFlow

./: README.md  package-lock.json  package.json
.github/workflows/: build-ios.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  commands.rs  db.rs  lib.rs  main.rs
src/components/calendar/: CalendarWidget.tsx
src/components/common/: ConfirmDialog.tsx  EmptyState.tsx
src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
src/hooks/: useKeyboardShortcuts.ts  useNotifications.ts
src/pages/Analytics/: index.tsx
src/pages/Auth/: LoginPage.tsx  RegisterPage.tsx
src/pages/Dashboard/: ExpenseSection.tsx  IncomeSection.tsx  index.tsx
src/pages/History/: index.tsx
src/pages/SavingsGoals/: index.tsx
src/pages/Settings/: index.tsx
src/services/: storage.ts
src/stores/: useAuthStore.ts  useCategoryStore.ts  useEventStore.ts  useExpenseStore.ts  useGoalStore.ts  useIncomeStore.ts  useSettingsStore.ts
src/types/: index.ts
src/utils/: calculations.ts  exporters.ts  formatters.ts
